--- a/templates/changePass.hbs
+++ b/templates/changePass.hbs
@@ -5,13 +5,13 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Portfolio</title>
- <link rel="stylesheet" href="/signup.css">
+ <link rel="stylesheet" href="/changePass.css">
 </head>
 
 <body>
 
  <h2>Change Password</h2>
- <form class="signup" action="/users/settings" method="post">
+ <form class="changeP" action="/users/settings" method="post">
   <input type="password" name="password" placeholder="New Password">
   
   <button type="submit">Save Changes</button>
