--- a/templates/home.hbs
+++ b/templates/home.hbs
@@ -16,6 +16,7 @@
   <a class="adminP" href="/auth/admin/login">Admin</a>
   </nav>
  </header>
- <h1>Welcome Home</h1>
+ <h1>Welcome Guest</h1>
+ <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSauhGSjUsGSJCFs8gRdOQbA75EhtVQ_L7sVA&usqp=CAU" alt="img">
 </body>
 </html>
