--- a/public/adminLogin.css
+++ b/public/adminLogin.css
@@ -10,7 +10,7 @@ form.login {
 input {
  display: block;
  margin-bottom: 5px;
- width: 50%;
+ width: 25%;
  padding: 5px 10px;
  border: 1px solid blueviolet;
  border-radius: 5px;
@@ -35,16 +35,5 @@ a.homeL {
  padding: 5px;
  font-weight: bold;
  background-color: rgb(88, 28, 43);
-}
-
-.popup {
- position: fixed;
- top: 50%;
- left: 50%;
- transform: translate(-50%, -50%);
- padding: 10px;
- background-color: #fff;
- border: 1px solid #ccc;
- box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
- z-index: 1000;
+ text-decoration: none;
 }
