--- a/public/changePass.css
+++ b/public/changePass.css
@@ -2,19 +2,9 @@ body {
  background-color: darkkhaki;
 }
 
-form.signup {
+form.changeP {
  max-width: 400px;
  /* margin: 0 auto; */
-}
-
-input {
-display: block;
-width: 100%;
-padding: 5px 10px;
-border: 1px solid blueviolet;
-border-radius: 5px;
-background-color: beige;
-margin-bottom: 5px;
 }
 
 button {
@@ -28,8 +18,7 @@ button {
  margin-bottom: 50px;
 }
 
-body a.loginS,
-a.homeS {
+body a.homeS {
  color: rgb(227, 221, 234);
  border: 1px solid #123;
  border-radius: 5px;
