--- a/public/unapproved.css
+++ b/public/unapproved.css
@@ -20,6 +20,12 @@ header {
 header a {
  text-decoration: none;
  color: inherit;
+ color: rgb(227, 221, 234);
+ border: 1px solid #123;
+ border-radius: 5px;
+ padding: 5px;
+ font-weight: bold;
+ background-color: rgb(88, 28, 43);
 }
 
 header a.myHome {
@@ -37,7 +43,8 @@ header nav {
  gap: 15px
 }
 
-header nav a.editP, a.usersP, 
+header nav a.editP,
+a.unappUsers,
 button.logoutButton {
  color: rgb(227, 221, 234);
  border: 1px solid #123;
@@ -47,8 +54,11 @@ button.logoutButton {
  background-color: rgb(88, 28, 43);
 }
 
-p {
- font-style: oblique;
- font-size: large;
- font-weight: 800;
+table,
+th,
+td {
+ border: 2px solid rgb(15, 15, 15);
+ border-collapse: collapse;
+ padding: 10px;
+ cursor: pointer;
 }
