--- a/templates/signup.hbs
+++ b/templates/signup.hbs
@@ -11,6 +11,7 @@
 <body>
 
  <h2>Registration Page</h2>
+ <h4>Please provide all informaton below</h4>
  <form class="signup" action="/signup" method="post">
   <input type="text" name="firstName" placeholder="First Name">
   <input type="text" name="lastName" placeholder="Last Name">
