--- a/templates/home.hbs
+++ b/templates/home.hbs
@@ -25,7 +25,7 @@
  </div>
 
  <div class="image">
- <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvjmbkZFOy92Wfi6AgwlM3MKbuGHF03UdB_w&usqp=CAU" alt="img">
+ <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvjmbkZFOy92Wfi6AgwlM3MKbuGHF03UdB_w&usqp=CAU" alt="imgl">
   </div>
 
  <div class="main">
